# civ7-mod-manager

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  package-lock.json  package.json
.github/actions/build-cli/: action.yaml
.github/actions/build-gui/: action.yaml
.github/actions/setup-macos/: action.yaml
.github/actions/setup-ubuntu/: action.yaml
.github/actions/setup-windows/: action.yaml
.github/workflows/: push.yaml
.zed/: settings.json
assets/: main.css
src/: lib.rs  manager.rs  provider.rs
src/provider/: civfanatics.rs  http.rs
